--- a/server/metadata/languages/ko.json
+++ b/server/metadata/languages/ko.json
@@ -177,7 +177,10 @@
   "defaultInfo": "기본정보",
   "socialSetting": "소셜연동",
   "facebook": "페이스북",
-  "kaako": "카카오",
+  "facebookSignUp": "페이스북 계정으로 시작하기",
+  "kakao": "카카오",
+  "kakaoSignUp": "카카오 계정으로 시작하기",
+  "forSignUp": "으로 3초만에 가입하기",
   "read": "읽음",
   "notRead": "읽지 않음",
   "disconnect": "연결 끊기",
@@ -198,6 +201,46 @@
   "content": "내용",
   "appliedTerms": "적용 약관",
   "termsManage": "약관 관리",
-  "isEssentialTerms": "는 필수 약관"
+  "isEssentialTerms": "는 필수 약관",
+  "or": "또는",
+  "and": "그리고",
+  "id": "아이디",
+  "idFind": "아이디 찾기",
+  "idFindDesc1": "해당 아이디는",
+  "done": "입니다.",
+  "pass": "패스워드",
+  "passFind": "패스워드 찾기",
+  "tempPass":"임시 비번 발급",
+  "passConfirm": "패스워드 확인",
+  "nowPass": "현재 패스워드",
+  "minLengthAlert": "글자 이상을 입력하세요.",
+  "dowadoFirst": "도와도가 처음이신가요?",
+  "dowado": "도와도",
+  "dowadoSignUpEx": "가입하고 도와도의 더 많은 기능을 이용하세요.",
+  "duplicateId": "중복 아이디 입니다.",
+  "idUseNotKorean": "아아디에 한글은 사용할 수 없습니다.",
+  "minLength": "자리 이상",
+  "signUpIdPattern": "숫자와 문자만을 입력할 수 있습니다.",
+  "passwordVerify": "패스워드가 일치하지 않습니다.",
+  "nickUnique": "중복 닉네임 입니다.",
+  "confirm": "확인",
+  "dowadoUseNick": "도와도에서 사용할 이름을 정해주세요.",
+  "dowadoUseNickCompany": "회사일 경우 상호명을 적어주세요.",
+  "signUpNeedConfirm": "회원가입시 입력한 휴대폰 번호가 필요합니다.",
+  "phoneNeedConfirm" : "휴대폰 인증이 필요해요.",
+  "phoneNeedConfirmDesc" : "공고에 지원하기 위해 필수입니다.",
+  "certification": "인증하기",
+  "signUpComplete": "가입이 완료되었습니다.",
+  "needProfile": "공고에 지원하시려면 프로필을 작성해주세요.",
+  "profileManagement": "프로필 관리 가기",
+  "recommend": "추천인입력",
+  "needIdPass": "아이디와 비밀번호를 입력해주세요",
+  "sendPassToPhone": "문자로 인증번호가 발송 되었습니다.",
+  "sendTempPassToPhone": "문자로 임시비밀번호가 발송 되었습니다.",
+  "insertCertNum": "인증 번호를 입력해 주세요",
+  "profile": "프로필"
+
+
+
 }
 
